--- a/assign4/assets/css/indexstyle.css
+++ b/assign4/assets/css/indexstyle.css
@@ -1,8 +1,209 @@
+* {/* baseline code for entire webpage*/
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+/* All of the text on the page unless specified will have a font of 12px and the cool Google fonts.*/
+html {
+    font-size: 10px;
+    font-family: 
+    'Archivo Black',
+    'Ubuntu',
+    'Maven Pro',
+    'Geneva',
+    'Verdana',
+    'sans-serif';
+}
+/*The a tag will allow all the hyperlinked text to have the white color (#eee)*/
+a{
+    text-decoration: none;
+    color: #000000;
+}
+
+header{
+    width: 100%;
+    height: 100vh;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, .8), rgba(0, 0, 0, .5)), url(../images/backimg.png) center no-repeat;
+    background-size: cover;
+    position: relative;
+    overflow: hidden;
+}
+
+.container {
+    max-width: 750px;
+    width: 90%;
+    margin: 0 auto;
+}
+
+.menu-toggle {
+    position: fixed;
+    top: 40px;
+    right: 40px;
+    color: #eeeeee;
+    font-size: 48px;
+    cursor: pointer;
+    z-index: 1000;
+    display: none;
+}
+
+nav {
+    padding-top: 5rem;
+    display: flex !important;
+    justify-content: space-between;
+    align-items: center;
+    text-transform: uppercase;
+    font-size: 1.6rem;
+}
+/*keyframe referenced*/
+.logo {
+    font-size: 3rem;
+    font-weight: 300;
+    transform: translateX(-500rem);
+    animation: moveMent .5s forwards;
+}
+
+.logo{
+    color: #82B822, !important;
+}
+
+nav ul {
+    display: flex;
+}
+
+/*keyframe referenced*/
+nav ul li {
+    list-style: none;
+    transform: translateX(100rem);
+    animation: moveMent .5s forwards;
+}
+
+nav ul li:nth-child(1) {
+    animation-delay: 0s;
+}
+
+nav ul li:nth-child(2) {
+    animation-delay: .5s;
+}
+
+nav ul li:nth-child(3) {
+    animation-delay: 1s;
+}
+
+nav ul li:nth-child(4) {
+    animation-delay: 1.5s;
+}
+
+nav ul li a {
+    padding: 1rem 0;
+    margin: 0 3rem;
+    position: relative;
+    letter-spacing: 2px;
+}
+
+nav ul li a:last-child {
+    margin-right: 0;
+}
+
+nav ul li a::before,
+nav ul li a::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: #82B822;
+    left: 0;
+    transform: scaleX(0);
+    transition: all .5s;
+}
+
+nav ul li a::before {
+    top: 0;
+    transform-origin: left;
+}
+
+nav ul li a::after {
+    bottom: 0;
+    transform-origin: right;
+}
+
+.overlay {
+    background-color: rgba(0, 0, 0, .95);
+    position: fixed;
+    right: 0;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    transition: opacity 650ms;
+    transform: scale(0);
+    opacity: 0;
+    display: none;
+}
+
+nav ul li a:hover::before,
+nav ul li a:hover::after {
+    transform: scaleX(1);
+}
+/*Keyframe named moveMent*/
+@keyframes moveMent {
+    from {}
+
+    to {
+        transform: translateX(0);
+    }
+} 
+
+@media screen and (max-width: 700px) {
+
+    .menu-toggle {
+        display: block;
+    }
+
+    nav {
+        padding-top: 0;
+        display: none;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        height: 100vh;
+        text-align: center;
+    }
+
+    nav ul {
+        flex-direction: column;
+    }
+
+    nav ul li {
+        margin-top: 5rem;
+    }
+
+    nav ul li a {
+        margin: 0;
+        font-size: 2.5rem;
+    }
+
+    .logo {
+        font-size: 5rem;
+    }
+
+    .overlay.menu-open,
+    nav.menu-open {
+        display: flex;
+        transform: scale(1);
+        opacity: 1;
+    }
+
+
+/* 
+New Learning
+px to rem conversion
+1rem equal to 16px
+padding is like the padding we discuss.  It is a space in the top and bottom of the element.
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
 html{
     font-size: 10px;
     font-family: 
@@ -23,51 +224,72 @@ a{
 header{
     width:100%;
     height:100vh;
-    background: linear-gradient(to top, #ADA7A6, rgba(0, 0, 0, .5)),
+    background: linear-gradient(to bottom,#000000, #ADA7A6),
     url(../images/backimg.png) center no-repeat;
     background-size: cover;
+    position: relative;
+    overflow: hidden;
+}
+.container{
+    max-width: 1200px;
+    width: 90%;
+    margin: 0 auto;
 }
 
+.menu-toggle {
+    position: fixed;
+    top: 2.5rem;
+    right: 2.5rem;
+    color: #eeeeee;
+    font-size: 3rem;
+    cursor: pointer;
+    z-index: 1000;
+    display: none;
+}
 nav{
-    padding-top:5rem;
-    /* display: flex; */
+    padding-top:50px;
+    display: flex, !important;
     justify-content: space-between;
     align-items: center;
     text-transform: uppercase;
-    font-size: 1.6rem;
-}
+    font-size: 16px;
+} 
 
 .logo{
-    font-size: 3rem;
+    font-size: 20px;
     font-weight: 300;
 }
 
 .logo span{
     color: #82B822;
-    font-family: 'Qwigley',cursive,
+    font-family: 
+    'Qwigley'!important,
+    cursive,
     'Lucida Sans',
     'Lucida Sans Regular',
     'Lucida Grande',
     'Lucida Sans Unicode',
-    Geneva,
-    Verdana,
-    sans-serif;
+    'Geneva',
+    'Verdana',
+    'sans-serif';
 }
 
-.container{
-    max-width: 120rem;
-    widows: 90%;
-    margin: 0 auto;
-}
 nav ul{
-    display:flex;
-    float: right;
+    display: flex,
+     !important;
+}
+nav ul li{
+    list-style: none;
 }
 nav ul li a{
     padding: 1rem 0;
-    margin: 0 3rem;
+    margin-right: 0 10px;
     position: relative;
     letter-spacing: 2px;
+}
+
+nav ul li a:last-child{
+    margin-right: 0;
 }
 .leftside,
 .rightside {
@@ -100,4 +322,4 @@ nav ul li a{
 .row.no-gutters>[class*=" col-"] {
     padding-right: 0;
     padding-left: 0;
-}
+} */ 
