--- a/assign4/assets/css/indexstyle.css
+++ b/assign4/assets/css/indexstyle.css
@@ -15,19 +15,20 @@ html {
     'sans-serif';
 }
 /*The a tag will allow all the hyperlinked text to have the white color (#eee)*/
-a{
+/* a{
     text-decoration: none;
-    color: #000000;
-}
+    color: #ffffff;
+} */
 
-header{
+header img{
     width: 100%;
     height: 100vh;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, .8), rgba(0, 0, 0, .5)), url(../images/backimg.png) center no-repeat;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, .8), rgba(0, 0, 0, .5)) center no-repeat;
     background-size: cover;
     position: relative;
     overflow: hidden;
 }
+
 
 .container {
     max-width: 750px;
@@ -61,11 +62,36 @@ nav {
     transform: translateX(-500rem);
     animation: moveMent .5s forwards;
 }
+.logo, h1 {
+    font-size: 32px;
+    font-weight: 500px;
+    color: #ffffff;
 
-.logo{
+}
+.logo, a :hover {
+    color: #ffff00;
+}
+li{
     color: #82B822, !important;
 }
+.logo {
+    font-size: 32px;
+    color: #fff;
+    text-align: left;
+    -webkit-animation: glow 1s ease-in-out infinite alternate;
+    -moz-animation: glow 1s ease-in-out infinite alternate;
+    animation: glow 1s ease-in-out infinite alternate;
+}
 
+@-webkit-keyframes glow {
+    from {
+        text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
+    }
+
+    to {
+        text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+    }
+}
 nav ul {
     display: flex;
 }
